fix: fixed header z-index

--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -8,4 +8,5 @@
   color: var(--secondary-color);
   position: fixed;
   height: 60px;
+  z-index: 999;
 }
